[gd_scene load_steps=25 format=3 uid="uid://sl3rawaxpq0l"]

[ext_resource type="Script" uid="uid://c630gmehkudie" path="res://Scripts/monster.gd" id="1_4snmv"]
[ext_resource type="Texture2D" uid="uid://wuyveleeuj8w" path="res://Assets/Spritesheet/0_Monster_Fly_000.png" id="2_4uecc"]
[ext_resource type="Texture2D" uid="uid://vfqdp1k5v66h" path="res://Assets/Spritesheet/0_Monster_Fly_001.png" id="3_84k7g"]
[ext_resource type="Texture2D" uid="uid://rvuj4vu5u7ii" path="res://Assets/Spritesheet/0_Monster_Fly_002.png" id="4_lh53i"]
[ext_resource type="Texture2D" uid="uid://2sck4vl0lpt4" path="res://Assets/Spritesheet/0_Monster_Fly_003.png" id="5_co7f0"]
[ext_resource type="Texture2D" uid="uid://b3kde5b03pya6" path="res://Assets/Spritesheet/0_Monster_Fly_004.png" id="6_bffad"]
[ext_resource type="Texture2D" uid="uid://c5q2emvkd5417" path="res://Assets/Spritesheet/0_Monster_Fly_005.png" id="7_dkkyq"]
[ext_resource type="Texture2D" uid="uid://tl2kjq2q1vv" path="res://Assets/Spritesheet/0_Monster_Fly_006.png" id="8_k1nwt"]
[ext_resource type="Texture2D" uid="uid://cl4rrkr3md7h7" path="res://Assets/Spritesheet/0_Monster_Fly_007.png" id="9_w0w4i"]
[ext_resource type="Texture2D" uid="uid://p2ykw5gpv1d6" path="res://Assets/Spritesheet/0_Monster_Fly_008.png" id="10_n8snc"]
[ext_resource type="Texture2D" uid="uid://cyjj81ouq8y1l" path="res://Assets/Spritesheet/0_Monster_Fly_009.png" id="11_uj5k6"]
[ext_resource type="Texture2D" uid="uid://vpgcc170c2fv" path="res://Assets/Spritesheet/0_Monster_Fly_010.png" id="12_3o4yp"]
[ext_resource type="Texture2D" uid="uid://cnwr7kf4gn4jk" path="res://Assets/Spritesheet/0_Monster_Fly_011.png" id="13_yybfj"]
[ext_resource type="Texture2D" uid="uid://ukspgnhtyyd0" path="res://Assets/Spritesheet/0_Monster_Fly_012.png" id="14_cl45u"]
[ext_resource type="Texture2D" uid="uid://bgckjv78wxys8" path="res://Assets/Spritesheet/0_Monster_Fly_013.png" id="15_wnq0p"]
[ext_resource type="Texture2D" uid="uid://cw51ujh5vg50d" path="res://Assets/Spritesheet/0_Monster_Fly_014.png" id="16_crsld"]
[ext_resource type="Texture2D" uid="uid://r1dqn3gj2mvh" path="res://Assets/Spritesheet/0_Monster_Fly_015.png" id="17_3msot"]
[ext_resource type="Texture2D" uid="uid://c7kksyvt1rxel" path="res://Assets/Spritesheet/0_Monster_Fly_016.png" id="18_bx7ud"]
[ext_resource type="Texture2D" uid="uid://bilcyg3ebywyr" path="res://Assets/Spritesheet/0_Monster_Fly_017.png" id="19_pwfih"]

[sub_resource type="SpriteFrames" id="SpriteFrames_l4gnj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4uecc")
}, {
"duration": 1.0,
"texture": ExtResource("3_84k7g")
}, {
"duration": 1.0,
"texture": ExtResource("4_lh53i")
}, {
"duration": 1.0,
"texture": ExtResource("5_co7f0")
}, {
"duration": 1.0,
"texture": ExtResource("6_bffad")
}, {
"duration": 1.0,
"texture": ExtResource("7_dkkyq")
}, {
"duration": 1.0,
"texture": ExtResource("8_k1nwt")
}, {
"duration": 1.0,
"texture": ExtResource("9_w0w4i")
}, {
"duration": 1.0,
"texture": ExtResource("10_n8snc")
}, {
"duration": 1.0,
"texture": ExtResource("11_uj5k6")
}, {
"duration": 1.0,
"texture": ExtResource("12_3o4yp")
}, {
"duration": 1.0,
"texture": ExtResource("13_yybfj")
}, {
"duration": 1.0,
"texture": ExtResource("14_cl45u")
}, {
"duration": 1.0,
"texture": ExtResource("15_wnq0p")
}, {
"duration": 1.0,
"texture": ExtResource("16_crsld")
}, {
"duration": 1.0,
"texture": ExtResource("17_3msot")
}, {
"duration": 1.0,
"texture": ExtResource("18_bx7ud")
}, {
"duration": 1.0,
"texture": ExtResource("19_pwfih")
}],
"loop": true,
"name": &"Fly",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ljpkj"]
size = Vector2(17.5, 17.75)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rp6an"]
radius = 7.0
height = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4snmv"]
size = Vector2(35.25, 7)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4snmv"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 30.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_max = 4.0
color = Color(0.122709, 0.49318, 5.77569e-07, 1)

[node name="CharacterBody2D" type="CharacterBody2D" groups=["Traps"]]
script = ExtResource("1_4snmv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 10)
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_l4gnj")
animation = &"Fly"
speed_scale = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_ljpkj")

[node name="HitArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2(0, 5)
scale = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_rp6an")

[node name="HeadArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadArea"]
position = Vector2(0, -13)
shape = SubResource("RectangleShape2D_4snmv")

[node name="explosion" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
preprocess = 0.03
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_4snmv")

[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
[connection signal="body_entered" from="HeadArea" to="." method="_on_head_area_body_entered"]
